--- a/README.Rmd
+++ b/README.Rmd
@@ -77,8 +77,10 @@ HPDD <- load_datasets("HPDD")
 
 HPDD$dimensions$indicator
 
-HPDD$get_series(freq = "A",
-                ref_area = c("PT","ES"),
-                indicator = "GGXWDG_GDP", 
-                start_period = "1974")
+d <- HPDD$get_series(freq = "A",
+                     ref_area = c("PT","ES"),
+                     indicator = "GGXWDG_GDP", 
+                     start_period = "1974")
+# see original data
+ls_series <- attr(d, "original_data")
 ```
